fixed spacing on our story page fr this time

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1098,6 +1098,7 @@ section.our-story.open {
     justify-content: space-between;
     align-items: center;
     width: 280px;
+    padding-bottom: 0;
 }
 
 .tab-buttons button {
